# Craylib_starter

./: .gitignore  CMakeLists.txt  CMakePresets.json
include/: test.h
src/: main.c  test.c
